# sunset_precipitation

./: .gitignore  README.md  code.ipynb  composite_figure1.py  pyproject.toml  rural_02_05_high.npy  rural_02_05_low.npy  rural_02_05_mean.npy  rural_05_1_high.npy  rural_1_high.npy  spa_2003.txt  spa_2005.txt  spa_2006.txt  spa_2007.txt  spa_2013.txt  spa_2014.txt  spa_2015.txt  spa_2018.txt  spa_2020.txt  turban_02_05_high.npy  turban_02_05_low.npy  turban_05_1_high.npy  turban_05_1_low.npy  turban_05_1_mean.npy  turban_1_low.npy  turban_1_mean.npy  urban_02_05_mean.npy  urban_05_1_mean.npy  urban_1_low.npy
analysis/: composite_figure1_analysis.ipynb  data_loader.py  figure1.ipynb  figure1_components.py
data/: rural_02_05_high_50level.npy  rural_02_05_low_50level.npy  rural_02_05_mean_50level.npy  rural_05_1_high_50level.npy  rural_05_1_low.npy  rural_05_1_low_50level.npy  rural_05_1_mean.npy  rural_05_1_mean_50level.npy  rural_1_high_50level.npy  rural_1_low.npy  rural_1_low_50level.npy  rural_1_mean.npy  rural_1_mean_50level.npy  spa_2001.txt  spa_2002.txt  spa_2004.txt  spa_2008.txt  spa_2009.txt  spa_2010.txt  spa_2011.txt  spa_2012.txt  spa_2016.txt  spa_2017.txt  spa_2019.txt  turban_02_05_high_50level.npy  turban_02_05_low_50level.npy  turban_02_05_mean.npy  turban_02_05_mean_50level.npy  turban_05_1_high_50level.npy  turban_05_1_low_50level.npy  turban_05_1_mean_50level.npy  turban_1_high.npy  turban_1_high_50level.npy  turban_1_low_50level.npy  turban_1_mean_50level.npy  urban_02_05_high.npy  urban_02_05_high_50level.npy  urban_02_05_low.npy  (+12 more)
(+5 files in other folders)
