[project]
name = "sunset-precipitation"
version = "0.1.0"
description = "Analysis and visualization of urban sunset precipitation enhancement patterns"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.6.2",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.5.0",
    "ipdb>=0.13.0",
]

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "W", "I"]
